# assigner

./: .gitignore  Cargo.toml  README.md
src/: main.rs
src/commands/: mod.rs
src/commands/assignments/: mod.rs
src/commands/courses/: mod.rs
src/commands/create/: mod.rs
src/commands/todo/: mod.rs
