[package]
name = "canvas-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
canvasapi = { version = "0.5.0", features = ["blocking"] }
clap = { version = "4.0.32", features = ["derive"] }
colored = "2.0.0"
config = { version = "0.13.3", features = ["toml"] }
regex = "1.7.0"
